--- a/backend/packingplans/src/main/resources/application.properties
+++ b/backend/packingplans/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/pp_db
 spring.datasource.username=pp_user
-spring.datasource.password=password
+spring.datasource.password=Passw0rd@
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 server.port=8081
