--- a/frontend/packingplans/package.json
+++ b/frontend/packingplans/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fullcalendar/angular": "^6.1.7",
+    "@fullcalendar/core": "^6.1.7",
+    "@fullcalendar/daygrid": "^6.1.7",
+    "@fullcalendar/interaction": "^6.1.7",
     "bootstrap": "^5.2.3",
     "mdb-angular-ui-kit": "^4.0.0",
     "rxjs": "~7.8.0",
