--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
     "ng2-select2": "^1.0.0-beta.16"
+  },
+  "devDependencies": {
+    "@types/jasmine": "^4.3.2",
+    "jasmine-core": "^5.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-spec-reporter": "^0.0.36"
   }
 }
